$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.14 1997/11/10 23:50:36 jcmurphy Exp $

CHANGES for ARSperl

Revision history for ARSperl.

MM/DD/YY
=======================================================================
#######################################################################
=======================================================================
11/19/97        (1.5206)
 
  o (JCM)  added ars_GetVUI to the ARS.pm exports line.
  o (JCM)  added refreshCode to GetCharMenu hash
  o (JCM)  fixed bug in groupList value change in 1.5205

=======================================================================
#######################################################################
=======================================================================
11/04/97	(1.5205)

  o (JCM)  updated the groupList value returned by GetSchema()
           so that it contains the correct key words.

=======================================================================
#######################################################################
=======================================================================
10/29/97        (1.5204)

  o (JCM)  added ars_GetControlStructFields()

=======================================================================
#######################################################################
=======================================================================
10/20/97        (1.5203)
 
  o (JCM)  beginnings of a WinNT port (not completed yet)
  o (JCM)  added "timestamp" to the return hash of GetEscalation()
  o (JCM)  added some extra malloc/free debugging stuff

=======================================================================
#######################################################################
=======================================================================
10/13/97        (1.5202)
 
  o (JCM)  removed a superfluous debugging statement

=======================================================================