@@ -7,8 +7,8 @@
  <H2> Installation of ARSperl </H2>
 
  <OL>
-   <LI> <A HREF="ARSperl.tgz">Download the distribution</A> (tar/gzip - 80K)
-        (<A HREF="ftp://smurfland.cit.buffalo.edu/pub/utils/Perl/ARSperl.tgz">also available via ftp</A>)
+   <LI> <A HREF="http://smurfland.cit.buffalo.edu/pub/utils/Perl/">Download the distribution</A> (
+        (<A HREF="ftp://smurfland.cit.buffalo.edu/pub/utils/Perl/">also available via ftp</A>)
    <LI> Unpack (requires gzip and tar)
    <LI> Edit the Makefile.PL and follow the brief instructions at the top of it.
    <LI> Type "perl Makefile.PL"
@@ -22,7 +22,7 @@
  <H2> Notes </H2>
 
  HPUX users will need to compile the extension statically into the Perl binary.
- See <A HREF="http://smurfland.cit.buffalo.edu/ARSperl/FAQs/">the ARSperl FAQ</A>
+ See <A HREF="http://arsinfo.cit.buffalo.edu/perl/FAQs/">the ARSperl FAQ</A>
  section for details.
  
  <HR>
