@@ -1,10 +1,17 @@
-$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.14 1997/11/10 23:50:36 jcmurphy Exp $
+$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.15 1997/12/15 21:01:58 jcmurphy Exp $
 
 CHANGES for ARSperl
 
 Revision history for ARSperl.
 
 MM/DD/YY
+=======================================================================
+#######################################################################
+=======================================================================
+xx/yy/zz        (1.53)
+
+  o (JCM)  fixed some minor errors in doc
+
 =======================================================================
 #######################################################################
 =======================================================================
